# Rosalyn

./: README  Rosalyn.cabal  runHlint.sh  runProfiler.sh  stack.yaml
app/: Main.hs
src/Experiment/: Experiment.hs
src/Rosalyn/: Distance.hs  Executor.hs  Executor2.hs  ListUtils.hs  Phylogeny.hs  Random.hs  Sequence.hs  Sequencing.hs  Statistics.hs  Trees.hs
test/: Spec.hs
