name:                Rosalyn
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/Rosalyn#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib,
                       Rosalyn.Executor,
                       Rosalyn.Sequence, Rosalyn.Sequencing, Rosalyn.Trees, Rosalyn.Distance, Rosalyn.Phylogeny,
                       Rosalyn.Random, Rosalyn.Statistics,
                       Rosalyn.ListUtils,
                       Rosalyn.External.Spades,
                       Experiment.Experiment
  build-depends:       base >= 4.7 && < 5,
    hashable, directory, process, unix,
    random,
    containers, array, bytestring, ListLike,
    biocore,
    bioalign, edit-distance
    --bed-and-breakfast
    --hmm
    --QuickCheck--, QuickSpec
    --pads,
    --pads-haskell
    --,bioinformatics-toolkit, bio
  default-language:    Haskell2010

executable Rosalyn-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       Rosalyn
  default-language:    Haskell2010

test-suite Rosalyn-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       Rosalyn,
                       QuickCheck
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Rosalyn

